--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,8 +15,8 @@
             "name": "App",
             "request": "launch",
             "mainClass": "App",
-            "projectName": "EffortLoggerPrototype",
-            "vmArgs": "--module-path '${workspaceFolder}/lib/javafx-sdk-20/lib' --add-modules javafx.controls,javafx.fxml"
+            "projectName": "EffortLoggerPrototype_f3e8c611",
+            "vmArgs": "--module-path '${workspaceFolder}/lib/javafx-sdk-20/lib' --add-modules javafx.controls,javafx.fxml,javafx.media"
         }
     ]
 }
